--- a/NewTrainingFramework/NewTrainingFramework.vcxproj
+++ b/NewTrainingFramework/NewTrainingFramework.vcxproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <ClCompile Include="Game\Physic\Circle.cpp" />
     <ClCompile Include="Game\Physic\CollisionManager.cpp" />
+    <ClCompile Include="Game\Physic\GameMap.cpp" />
     <ClCompile Include="Game\Physic\Object.cpp" />
     <ClCompile Include="Game\Physic\Physic.cpp" />
     <ClCompile Include="Game\Physic\Plane.cpp" />
@@ -108,6 +109,7 @@
   <ItemGroup>
     <ClInclude Include="Game\Physic\Circle.h" />
     <ClInclude Include="Game\Physic\CollisionManager.h" />
+    <ClInclude Include="Game\Physic\GameMap.h" />
     <ClInclude Include="Game\Physic\Object.h" />
     <ClInclude Include="Game\Physic\Physic.h" />
     <ClInclude Include="Game\Physic\Plane.h" />
