--- a/NewTrainingFramework/NewTrainingFramework.vcxproj.filters
+++ b/NewTrainingFramework/NewTrainingFramework.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="Game\Utils\TextureManager.cpp">
       <Filter>Source Files\Game\Utils</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Utils\Cube.cpp">
+      <Filter>Source Files\Game\Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Globals.h">
@@ -117,6 +120,9 @@
       <Filter>Source Files\Game\Physic</Filter>
     </ClInclude>
     <ClInclude Include="Game\Utils\texturemanager.h">
+      <Filter>Source Files\Game\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Utils\Cube.h">
       <Filter>Source Files\Game\Utils</Filter>
     </ClInclude>
   </ItemGroup>
