--- a/NewTrainingFramework/NewTrainingFramework.vcxproj
+++ b/NewTrainingFramework/NewTrainingFramework.vcxproj
@@ -24,7 +24,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v110</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -99,6 +99,7 @@
     <ClCompile Include="Game\Physic\Rectangle.cpp" />
     <ClCompile Include="Game\Physic\SceneManager.cpp" />
     <ClCompile Include="Game\Utils\Cube.cpp" />
+    <ClCompile Include="Game\Utils\GCamera.cpp" />
     <ClCompile Include="Game\Utils\TextureManager.cpp" />
     <ClCompile Include="Game\Utils\VideoDriver.cpp" />
     <ClCompile Include="NewTrainingFramework.cpp" />
@@ -119,6 +120,7 @@
     <ClInclude Include="Game\Physic\SceneManager.h" />
     <ClInclude Include="Game\Utils\Cube.h" />
     <ClInclude Include="Game\Utils\Define.h" />
+    <ClInclude Include="Game\Utils\GCamera.h" />
     <ClInclude Include="Game\Utils\texturemanager.h" />
     <ClInclude Include="Game\Utils\VideoDriver.h" />
     <ClInclude Include="Globals.h" />
