--- a/NewTrainingFramework/NewTrainingFramework.vcxproj.filters
+++ b/NewTrainingFramework/NewTrainingFramework.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="Game\Utils\GCamera.cpp">
       <Filter>Source Files\Game\Utils</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Utils\QFont.cpp">
+      <Filter>Source Files\Game\Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Globals.h">
@@ -129,6 +132,9 @@
       <Filter>Source Files\Game\Utils</Filter>
     </ClInclude>
     <ClInclude Include="Game\Utils\GCamera.h">
+      <Filter>Source Files\Game\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Utils\QFont.h">
       <Filter>Source Files\Game\Utils</Filter>
     </ClInclude>
   </ItemGroup>
